[package]
name = "monzo-cli"
version = "0.1.0"
authors = ["Dewald Viljoen <dv@dewaldv.com>"]
edition = "2021"
description = "Monzo CLI for automating finance bits."
readme = "README.md"
keywords = ["monzo", "mondo", "async", "finops"]
homepage = "https://github.com/dewaldv/monzo-cli"
repository = "https://github.com/dewaldv/monzo-cli"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.3", features = ["derive", "env"] }
csv = "1.3.0"
# monzo-lib = "0.4.4"
monzo-lib = { git = "https://github.com/DewaldV/monzo-lib.git" }
serde = "1.0.198"
thiserror = "1.0.58"
# monzo-lib = { path = "../monzo-lib" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.12"
